Fixes the button on small screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -233,8 +233,6 @@ code {
   cursor: pointer;
   color: var(--fg0);
   border: 1px solid var(--aqua);
-  margin-top: 9px;
-  margin-bottom: 9px;
   line-height: 34px;
   padding-left: 5px;
   padding-right: 5px;
